// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle a combination of multiple new comments and nested replies 1`] = `
Array [
  Object {
    "c": "bam",
    "cn": "BLAST",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-comment-bam",
    "k": "comment",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
  Object {
    "c": "whamo",
    "cn": "Mike D",
    "id": "rando-reply-whamo",
    "k": "reply",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "rando",
  },
  Object {
    "c": "test",
    "cn": "Mike D",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-comment-test",
    "k": "comment",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
  Object {
    "c": "test",
    "cn": "Mike D",
    "id": "rando-reply-test",
    "k": "reply",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "rando",
  },
  Object {
    "c": "foobar",
    "cn": "Mike D",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-reply-foobar",
    "k": "reply",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
]
`;

exports[`should notify comment author and puzzle author when third party replies 1`] = `
Array [
  Object {
    "c": "baz",
    "cn": "Mike D",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-comment-baz",
    "k": "comment",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
  Object {
    "c": "baz",
    "cn": "Mike D",
    "id": "dummy-author-id-reply-baz",
    "k": "reply",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "dummy-author-id",
  },
]
`;

exports[`should notify comment author only when puzzle author replies 1`] = `
Array [
  Object {
    "c": "baz",
    "cn": "Mike D",
    "id": "dummy-author-id-reply-baz",
    "k": "reply",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "dummy-author-id",
  },
]
`;

exports[`should notify for a new comment by somebody else 1`] = `
Array [
  Object {
    "c": "LwgoVx0BAskM4wVJyoLj",
    "cn": "Mike D",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-comment-LwgoVx0BAskM4wVJyoLj",
    "k": "comment",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
]
`;

exports[`should notify for a reply to own comment on own puzzle 1`] = `
Array [
  Object {
    "c": "bar",
    "cn": "Jim",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-reply-bar",
    "k": "reply",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
]
`;

exports[`should notify for multiple comments by somebody else 1`] = `
Array [
  Object {
    "c": "bar",
    "cn": "Jim",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-comment-bar",
    "k": "comment",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
  Object {
    "c": "bam",
    "cn": "Tom",
    "id": "fSEwJorvqOMK5UhNMHa4mu48izl1-comment-bam",
    "k": "comment",
    "p": "puzzle-id-here",
    "pn": "Raises, as young",
    "r": false,
    "u": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  },
]
`;
